--- a/MANUALHTML/master-file.html
+++ b/MANUALHTML/master-file.html
@@ -6,15 +6,6 @@
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
   <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
-  <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
-  <![endif]-->
-  <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
-  <![endif]-->
-  <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
-  <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
 <body>
@@ -29,93 +20,92 @@
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
               <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="filehame.html">filehame(1)</a></li>
+              <li><a href="fromcsv.html">fromcsv(1)</a></li>
+              <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="wjson.html">wjson(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
+              <li><a href="marume.html">marume(1)</a></li>
+              <li><a href="tateyoko.html">tateyoko(1)</a></li>
+              <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
+              <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
+              <li><a href="loopj.html">loopj(1)</a></li>
+              <li><a href="ycat.html">ycat(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
+              <li><a href="mdate.html">mdate(1)</a></li>
+              <li><a href="joinx.html">joinx(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
+              <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="tocsv.html">tocsv(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="getlast.html">getlast(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
+              <li><a href="unmap.html">unmap(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="block_getlast.html">block_getlast(1)</a></li>
+              <li><a href="count.html">count(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
               <li><a href="calsed.html">calsed(1)</a></li>
-              <li><a href="cap.html">cap(1)</a></li>
-              <li><a href="cgi-name.html">cgi-name(1)</a></li>
-              <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
-              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
-              <li><a href="check_date_name.html">check_date_name(1)</a></li>
-              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
-              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
-              <li><a href="check_need_name.html">check_need_name(1)</a></li>
-              <li><a href="cjoin0.html">cjoin0(1)</a></li>
-              <li><a href="cjoin1.html">cjoin1(1)</a></li>
-              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
-              <li><a href="cjoin2.html">cjoin2(1)</a></li>
-              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
-              <li><a href="count.html">count(1)</a></li>
-              <li><a href="ctail.html">ctail(1)</a></li>
-              <li><a href="dayslash.html">dayslash(1)</a></li>
-              <li><a href="delf.html">delf(1)</a></li>
-              <li><a href="delr.html">delr(1)</a></li>
-              <li><a href="divsen.html">divsen(1)</a></li>
-              <li><a href="exist.html">exist(1)</a></li>
-              <li><a href="extname.html">extname(1)</a></li>
-              <li><a href="filehame.html">filehame(1)</a></li>
-              <li><a href="formhame.html">formhame(1)</a></li>
-              <li><a href="fpad.html">fpad(1)</a></li>
-              <li><a href="fromcsv.html">fromcsv(1)</a></li>
-              <li><a href="fsed.html">fsed(1)</a></li>
-              <li><a href="getfirst.html">getfirst(1)</a></li>
-              <li><a href="getlast.html">getlast(1)</a></li>
-              <li><a href="gyo.html">gyo(1)</a></li>
-              <li><a href="haba.html">haba(1)</a></li>
-              <li><a href="han.html">han(1)</a></li>
-              <li><a href="isdate.html">isdate(1)</a></li>
-              <li><a href="itouch.html">itouch(1)</a></li>
-              <li><a href="join0.html">join0(1)</a></li>
-              <li><a href="join1.html">join1(1)</a></li>
-              <li><a href="join1x.html">join1x(1)</a></li>
-              <li><a href="join2.html">join2(1)</a></li>
-              <li><a href="join2x.html">join2x(1)</a></li>
-              <li><a href="joinx.html">joinx(1)</a></li>
-              <li><a href="juni.html">juni(1)</a></li>
-              <li><a href="kasan.html">kasan(1)</a></li>
-              <li><a href="keta.html">keta(1)</a></li>
-              <li><a href="keycut.html">keycut(1)</a></li>
-              <li><a href="loopj.html">loopj(1)</a></li>
-              <li><a href="loopx.html">loopx(1)</a></li>
-              <li><a href="maezero.html">maezero(1)</a></li>
-              <li><a href="man2.html">man2(1)</a></li>
-              <li><a href="map.html">map(1)</a></li>
-              <li><a href="marume.html">marume(1)</a></li>
-              <li><a href="mdate.html">mdate(1)</a></li>
-              <li><a href="mime-read.html">mime-read(1)</a></li>
-              <li><a href="mojihame.html">mojihame(1)</a></li>
-              <li><a href="msort.html">msort(1)</a></li>
-              <li><a href="nameread.html">nameread(1)</a></li>
-              <li><a href="numchar.html">numchar(1)</a></li>
-              <li><a href="plus.html">plus(1)</a></li>
-              <li><a href="rank.html">rank(1)</a></li>
+              <li><a href="yarr.html">yarr(1)</a></li>
+              <li><a href="check_need_name.html">check_need_name(1)</a></li>
+              <li><a href="zen.html">zen(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
-              <li><a href="rjson.html">rjson(1)</a></li>
-              <li><a href="self.html">self(1)</a></li>
-              <li><a href="selr.html">selr(1)</a></li>
-              <li><a href="sm2.html">sm2(1)</a></li>
-              <li><a href="sm4.html">sm4(1)</a></li>
-              <li><a href="sm5.html">sm5(1)</a></li>
-              <li><a href="tarr.html">tarr(1)</a></li>
-              <li><a href="tateyoko.html">tateyoko(1)</a></li>
-              <li><a href="tcat.html">tcat(1)</a></li>
-              <li><a href="tocsv.html">tocsv(1)</a></li>
-              <li><a href="uconv.html">uconv(1)</a></li>
-              <li><a href="ulock.html">ulock(1)</a></li>
-              <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
-              <li><a href="wjson.html">wjson(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
+              <li><a href="keycut.html">keycut(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
+              <li><a href="cjoin0.html">cjoin0(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
+              <li><a href="map.html">map(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
+              <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="self.html">self(1)</a></li>
               <li><a href="xmldir.html">xmldir(1)</a></li>
-              <li><a href="yarr.html">yarr(1)</a></li>
-              <li><a href="ycat.html">ycat(1)</a></li>
-              <li><a href="yobi.html">yobi(1)</a></li>
+              <li><a href="mime-read.html">mime-read(1)</a></li>
+              <li><a href="keta.html">keta(1)</a></li>
+              <li><a href="sm4.html">sm4(1)</a></li>
+              <li><a href="getfirst.html">getfirst(1)</a></li>
+              <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="fpad.html">fpad(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
-              <li><a href="zen.html">zen(1)</a></li>
+              <li><a href="cgi-name.html">cgi-name(1)</a></li>
+              <li><a href="sm5.html">sm5(1)</a></li>
+              <li><a href="sm2.html">sm2(1)</a></li>
+              <li><a href="yobi.html">yobi(1)</a></li>
+              <li><a href="join0.html">join0(1)</a></li>
+              <li><a href="kasan.html">kasan(1)</a></li>
+              <li><a href="uriencode.html">uriencode(1)</a></li>
+              <li><a href="tarr.html">tarr(1)</a></li>
+              <li><a href="dayslash.html">dayslash(1)</a></li>
+              <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="rank.html">rank(1)</a></li>
+              <li><a href="han.html">han(1)</a></li>
+              <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ctail.html">ctail(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
+              <li><a href="juni.html">juni(1)</a></li>
+              <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
+              <li><a href="plus.html">plus(1)</a></li>
               <li></li>
-
-<li></li>
 
               <li class="separator"><hr></li>
               <li class="separator"><hr></li>
@@ -135,3 +125,35 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
+<h2>マスタファイル</h2>
+<h3>【名前】</h3>
+<p>マスタファイル : マスタの性質を満たすフィールド形式(5)のファイル</p>
+<h3>【書式】</h3>
+<p>第1フィールド 第2フィールド 第3フィールド ......</p>
+<h3>【説明】</h3>
+<p>それぞれの行がIDなどで管理され重複する行がなく、データの更新もあらかじめ定められたタイミングでのみ実施され、随時データの変更が入ったり、逐次データが追加されるといったことがなく、商品や店、都道府県、市区町村などデータ処理中に主要なデータとして出現するようなデータを一般的にマスタと呼んでいる。</p>
+<p>ユニケージ開発手法では、マスタに該当する<a href="field-format.html" class="command">フィールド形式(5)</a>のファイルを<a href="master-file.html" class="command">マスタファイル(5)</a>と呼んでいる。マスタの特性以外に、ユニケージ開発手法における<a href="master-file.html" class="command">マスタファイル(5)</a>は次の特性を満たしている必要がある。</p>
+<p>第1フィールドまたは第1フィールドから連続するいくつかのフィールドがキーフィールドになっている。それ以外のフィールドはキーフィールドに対応する値になっている。キーフィールド同士は重複しない。キーフィールドがLANG=C sortで整列されている。たとえば第1フィールドが店番号、第2フィールドが店名で構成される2フィールドの<a href="field-format.html" class="command">フィールド形式(5)</a>のファイルで、第1フィールドの値がLANG=C sortで整列されたファイルは<a href="master-file.html" class="command">マスタファイル(5)</a>と呼ばれる。</p>
+<p><a href="master-file.html" class="command">マスタファイル(5)</a>は短縮してマスタと呼ばれることがあり、また、Tukubaiコマンドマニュアルではmasterと表記される。<a href="master-file.html" class="command">マスタファイル(5)</a>とは対照的に随時データが追加されるような<a href="field-format.html" class="command">フィールド形式(5)</a>のファイルは<a href="transaction-file.html" class="command">トランザクションファイル(5)</a>と呼ばれている。</p>
+<h3>【例1】</h3>
+<p>マスタファイルの例は次のとおり。</p>
+<pre class="list">  001 新橋店
+  002 目黒店
+  003 五反田店
+  004 新宿店
+  005 池袋店
+  006 原宿店
+  007 渋谷店
+  008 吉祥寺店
+  009 下北沢店
+  010 品川店</pre>
+<h3>【関連項目】</h3>
+<p><a href="name-file.html" class="command">ネームファイル(5)</a>、<a href="transaction-file.html" class="command">トランザクションファイル(5)</a>、<a href="field-format.html" class="command">フィールド形式(5)</a>、<a href="tag-format.html" class="command">タグ形式(5)</a>、<a href="name-format.html" class="command">ネーム形式(5)</a></p>
+    </div>
+
+    <div id="lastmodified">Last modified: Sat Feb 10 20:19:21 JST 2024</div>
+
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2024 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+  </div>
+</body>
+</html>
